# 3D-Scene-OpenGL

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Model3D.cpp  Model3D.hpp  main.cpp
PG_Labs/: Laboratory_work_10.txt  Laboratory_work_11.txt  Laboratory_work_9.txt
models/aircraft/: aircraft.mtl
models/chest/: treasure_chest.mtl
models/moon/: moon.mtl
models/ocean/: ocean.mtl
models/ship/: F012BM.tif  gemiobj.mtl  ship_v1_03.mtl
shaders/: basic.frag  basic.vert  depthShader.frag  depthShader.vert  moon.frag  moon.vert  ocean.frag  ocean.vert  skyboxShader.frag
